# wokwi-builders

.github/workflows/: build-rust.yml
clang-wasm/: Dockerfile  test.c
devicescript/: Dockerfile  compile.sh
esp-idf/: Dockerfile  compile.sh  patch_ninja.py  test_patch_ninja.py
esp-idf/project/: CMakeLists.txt  sdkconfig.defaults
esp-idf/project/main/: CMakeLists.txt
esp-idf/project/main/src/: main.c
esp-rust-nostd/: Dockerfile  compile.sh
esp-rust-std/: Dockerfile  compile.sh
esp32-rust/: Cargo.toml  Dockerfile  compile.sh  fetch.sh
esp32-rust-nostd/: Cargo.toml  compile.sh
esp32c3-rust/: Cargo.toml  Dockerfile  compile.sh  fetch.sh
esp32c3-rust-nostd/: compile.sh
esp32c3-training/: Cargo.toml  Dockerfile  compile.sh  fetch.sh
esp32s2-rust/: Cargo.toml  Dockerfile  compile.sh
esp32s2-rust-nostd/: Dockerfile
golioth-esp-idf-sdk/: Dockerfile
golioth-esp-idf-sdk/project/: CMakeLists.txt
golioth-esp-idf-sdk/project/main/: CMakeLists.txt
golioth-esp-idf-sdk/project/main/src/: app_main.c
pico-sdk/: Dockerfile  build.sh  compile.sh
pico-sdk/project/: CMakeLists.txt  lwipopts.h
platformio-stm32/: Dockerfile  compile.sh
platformio-stm32/project/: platformio.ini
rust-nostd-avr/: Dockerfile  Dockerfile.runner  compile.sh
rust-nostd-esp/: Dockerfile  compile.sh  config.toml
rust-nostd-esp32/: Cargo.toml  Dockerfile
rust-nostd-esp32c3/: Cargo.toml  Dockerfile
rust-nostd-esp32s2/: Cargo.toml  Dockerfile  compile.sh
rust-std/: Dockerfile  compile.sh
rust-std-esp/: Dockerfile  compile.sh  fetch.sh
rust-std-esp32/: Cargo.toml  Dockerfile  compile.sh
rust-std-esp32c3/: Cargo.toml  Dockerfile  compile.sh
rust-std-esp32s2/: Cargo.toml  Dockerfile
rust-std-esp32s3/: Dockerfile  compile.sh
rust-training-esp32c3/: Cargo.toml  Dockerfile  cfg.toml  compile.sh  fetch.sh
rust-wasm/: Dockerfile
rust-wasm/project/: Cargo.toml
rust-wasm/project/.cargo/: config.toml
rust-wasm/project/src/: lib.rs
verilog-cxxrtl/: Dockerfile  LICENSE
verilog-cxxrtl/project/: compile.sh  main.cpp
verilog-cxxrtl/project/src/: wokwi-api.h  wokwi.v
zephyr-esp32/: Dockerfile  esp32-wokwi.dts  west.yml
zig-wasm/: .gitignore  Dockerfile  build.zig
zig-wasm/project/: build.zig
zig-wasm/project/src/: lib.zig  wokwi_chip_ii.zig
zig-wasm/project/wokwi/: wokwi_chip_ii.zig  wokwi_chip_ll.zig
zig-wasm/src/: main.zig  wokwi_chip_ii.zig
