[package]
name = "rust-project"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
log = "0.4"
anyhow = "1"
toml-cfg = "0.1"
url = "2"
esp-idf-svc = "0.42"
esp-idf-hal = "0.37"
embedded-svc = "0.21"
embedded-hal = "=1.0.0-alpha.8"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
st7789 = "0.6"
ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
ssd1306 = "0.7"
epd-waveshare = "0.5.0"
regex = "1"
soup = "0.5.1"
time = { version = "0.3.9", features = ["macros", "parsing"]}

[build-dependencies]
embuild = "0.29"
anyhow = "1"
