[package]
name = "rust-project"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git", rev = "e9f22ac" }
esp-backtrace = { version = "0.1.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
riscv-rt = { version = "0.9", optional = true }
ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
esp-println = { version = "0.3.0", features = ["esp32c3"] }
embedded-graphics = "0.7.1"
display-interface-spi = "0.4.1"
embedded-graphics-core = "0.3.3"
profont = "0.6.1"

[features]
default = ["rt"]
rt = ["riscv-rt"]
