[package]
name = "rust-project"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
log = "0.4"
anyhow = { version = "1", features = ["backtrace"] }
toml-cfg = "0.1"
url = "2"
esp-idf-svc = "0.45.0"
esp-idf-hal = "0.40.1"
embedded-svc = "0.24.0"
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
] }
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
st7789 = "0.7"
ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
ssd1306 = "0.7"
epd-waveshare = "0.5.0"
regex = "1"
soup = "0.5.1"
time = { version = "0.3.9", features = ["macros", "std", "parsing"] }
riscv-rt = { version = "0.10", optional = true }
# esp-clock
embedded-text = "0.5.0"
rustzx-utils = { version = "0.15", features = ["std"] }
rustzx-core = { version = "0.15", features = ["embedded-roms"] }
icm42670 = { git = "https://github.com/jessebraham/icm42670" }
shared-bus = "0.2.4"
shtcx = "0.10.0"
bitmap-font = "0.2.2"
tinybmp = "0.4.0"
profont = "0.6.1"
cfg-if = "1.0.0"

[build-dependencies]
embuild = "0.31"
anyhow = "1"
