[package]
name = "hardware-check"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "=1.0.69"
embedded-hal = "=0.2.7"
embedded-svc = "=0.24.0"
esp-idf-hal = "=0.40.1"
esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
get-uuid = { path = "../../common/lib/get-uuid" }
icm42670 = "=0.1.1"
lis3dh = "=0.4.2"
log = "=0.4.17"
mqtt-messages = { path = "../../common/lib/mqtt-messages" }
rgb-led = { path = "../../common/lib/rgb-led" }
shared-bus = "=0.2.5"
shtcx = "=0.11.0"
toml-cfg = "=0.1.3"
wifi = { path = "../../common/lib/wifi" }


[build-dependencies]
anyhow = "=1.0.69"
embuild = "=0.31.0"
toml-cfg = "=0.1.3"
