[package]
name = "hardware-check"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "=1.0.86"
embedded-hal = "=0.2.7"
embedded-svc = "=0.28.0"
esp-idf-svc  = "=0.49.0"
get-uuid = { path = "../../common/lib/get-uuid" }
icm42670 = "=0.1.1"
lis3dh = "=0.4.2"
log = "=0.4.22"
mqtt-messages = { path = "../../common/lib/mqtt-messages" }
rgb-led = { path = "../../common/lib/rgb-led" }
shared-bus = "=0.3.1"
shtcx = "=0.11.0"
toml-cfg = "=0.1.3"
wifi = { path = "../../common/lib/wifi" }
cc = "1.1.31" # Can be removed once https://github.com/rust-lang/cmake-rs/pull/225 is merged


[build-dependencies]
anyhow = "=1.0.86"
embuild = "=0.32.0"
toml-cfg = "=0.1.3"
